--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -36,6 +36,7 @@ footer {
   font-size: 1.5rem;
   font-weight: 600;
   margin-bottom: 1rem;
+  color: hsl(var(--foreground));
 }
 
 .section-description {
